# QLoRA-FineTuning-Platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  test.yml
configs/datasets/: alpaca.yaml
configs/inference/: vllm.yaml
configs/model/: llama3_8b.yaml  mistral_7b.yaml
configs/training/: fsdp.yaml  qlora_default.yaml
deployment/docker/: Dockerfile.inference  Dockerfile.train
deployment/kubernetes/: autoscaler.yaml  inference-deployment.yaml  trainer-job.yaml
docs/: architecture.md  deployment.md  distributed-training.md  qlora-explained.md
monitoring/: grafana-dashboard.json  prometheus.yml
scripts/: benchmark.sh  launch_multi_gpu.sh  merge_lora.sh  train.sh
src/: __init__.py
src/data/: __init__.py  dataset.py  loader.py  preprocessor.py
src/evaluation/: __init__.py  eval.py  metrics.py  mt_bench.py  perplexity.py
src/inference/: __init__.py  benchmark.py  generate.py  vllm_server.py
src/models/: __init__.py  loader.py  lora_adapter.py  quantization.py  tokenizer.py
src/serving/: __init__.py  api.py  batching.py  schemas.py
src/training/: __init__.py  checkpointing.py  deepspeed.py  fsdp.py  qlora.py  train.py  trainer.py
src/utils/: __init__.py  config.py  logging.py  seed.py
tests/: __init__.py  conftest.py  test_dataset.py  test_inference.py  test_tokenizer.py  test_training.py
