[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "qlora-finetuning-platform"
version = "0.1.0"
description = "Production-grade QLoRA fine-tuning platform for large language models"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Ayush Pramanik", email = "ayushpramanik2007@gmail.com" }]
keywords = ["llm", "qlora", "fine-tuning", "transformers", "peft", "bitsandbytes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML
    "torch>=2.3.0",
    "transformers>=4.41.0",
    "peft>=0.11.0",
    "bitsandbytes>=0.43.1",
    "accelerate>=0.30.0",
    "datasets>=2.19.0",
    "tokenizers>=0.19.0",
    # Serving
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    # Experiment tracking
    "wandb>=0.17.0",
    # Data processing
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    # Utilities
    "rich>=13.7.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.2",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
inference = [
    "vllm>=0.4.2",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]
all = [
    "qlora-finetuning-platform[inference,dev]",
]

[project.scripts]
qlora-train  = "src.training.train:main"
qlora-serve  = "src.serving.api:main"
qlora-eval   = "src.evaluation.eval:main"

[project.urls]
Homepage   = "https://github.com/ayushpramanik/qlora-finetuning-platform"
Repository = "https://github.com/ayushpramanik/qlora-finetuning-platform"
Issues     = "https://github.com/ayushpramanik/qlora-finetuning-platform/issues"

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length    = 100
src            = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "RUF",  # Ruff-specific rules
]
ignore = [
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "S101",   # use of assert (fine in tests)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN"]

[tool.ruff.format]
quote-style              = "double"
indent-style             = "space"
skip-magic-trailing-comma = false

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.12"
strict                 = true
warn_return_any        = true
warn_unused_configs    = true
disallow_untyped_defs  = true
ignore_missing_imports = true
exclude                = ["tests/", "notebooks/"]

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "peft.*",
    "bitsandbytes.*",
    "accelerate.*",
    "datasets.*",
    "wandb.*",
    "vllm.*",
    "omegaconf.*",
    "hydra.*",
]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths       = ["tests"]
python_files    = ["test_*.py", "*_test.py"]
python_classes  = ["Test*"]
python_functions = ["test_*"]
asyncio_mode    = "auto"
addopts         = [
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require a GPU",
    "integration: marks integration tests",
]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source   = ["src"]
omit     = ["*/tests/*", "*/__init__.py"]
branch   = true

[tool.coverage.report]
show_missing = true
skip_covered = false
precision    = 2

# ── setuptools ────────────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
